feat(ingest): optimize AIPs retrieval for aspiration REGARDS-264